--- a/_sass/color_schemes/mcmaster.scss
+++ b/_sass/color_schemes/mcmaster.scss
@@ -1,4 +1,13 @@
-$body-background-color: $grey-dk-300;
+
+$mcm-maroon: #7A003C !default;
+$mcm-gold: #FDBF57 !default;
+$mcm-grey: #5E6A71 !default;
+$mcm-yellow: #FFD100 !default;
+$mcm-lime: #D2D755 !default;
+$mcm-blue: #8BD3E6 !default;
+
+
+$body-background-color: $white;
 $sidebar-color: $grey-dk-300;
 $border-color: $grey-dk-200;
 
