--- a/_sass/color_schemes/mcmaster.scss
+++ b/_sass/color_schemes/mcmaster.scss
@@ -8,19 +8,19 @@ $mcm-blue: #8BD3E6 !default;
 
 
 $body-background-color: $white;
-$sidebar-color: $grey-dk-300;
-$border-color: $grey-dk-200;
+$sidebar-color: $grey-lt-000;
+$border-color: $grey-lt-100;
 
-$body-text-color: $grey-lt-300;
-$body-heading-color: $grey-lt-000;
-$nav-child-link-color: $grey-dk-000;
-$search-result-preview-color: $grey-dk-000;
+$body-text-color: $grey-dk-100;
+$body-heading-color: $grey-dk-300
+$nav-child-link-color: $grey-dk-100
+$search-result-preview-color: $grey-dk-000
 
-$link-color: $blue-000;
-$btn-primary-color: $blue-200;
-$base-button-color: $grey-dk-250;
+$link-color: $mcm-maroon;
+$btn-primary-color: $mcm-blue;
+$base-button-color: #f7f7f7
 
-$code-background-color: $grey-dk-250;
-$search-background-color: $grey-dk-250;
-$table-background-color: $grey-dk-250;
-$feedback-color: darken($sidebar-color, 3%);
+$code-background-color: $grey-lt-000
+$search-background-color: $white
+$table-background-color: $white
+$feedback-color: darken($sidebar-color, 3%)
