--- a/_sass/color_schemes/mcmaster.scss
+++ b/_sass/color_schemes/mcmaster.scss
@@ -6,21 +6,20 @@ $mcm-yellow: #FFD100 !default;
 $mcm-lime: #D2D755 !default;
 $mcm-blue: #8BD3E6 !default;
 
-
 $body-background-color: $white;
 $sidebar-color: $grey-lt-000;
 $border-color: $grey-lt-100;
 
 $body-text-color: $grey-dk-100;
-$body-heading-color: $grey-dk-300
-$nav-child-link-color: $grey-dk-100
-$search-result-preview-color: $grey-dk-000
+$body-heading-color: $grey-dk-300;
+$nav-child-link-color: $grey-dk-100;
+$search-result-preview-color: $grey-dk-000;
 
 $link-color: $mcm-maroon;
 $btn-primary-color: $mcm-blue;
-$base-button-color: #f7f7f7
+$base-button-color: #f7f7f7;
 
-$code-background-color: $grey-lt-000
-$search-background-color: $white
-$table-background-color: $white
-$feedback-color: darken($sidebar-color, 3%)
+$code-background-color: $grey-lt-000;
+$search-background-color: $white;
+$table-background-color: $white;
+$feedback-color: darken($sidebar-color, 3%);
