--- a/_sass/color_schemes/mcmaster.scss
+++ b/_sass/color_schemes/mcmaster.scss
@@ -1,11 +1,4 @@
 
-$mcm-maroon: #7A003C !default;
-$mcm-gold: #FDBF57 !default;
-$mcm-grey: #5E6A71 !default;
-$mcm-yellow: #FFD100 !default;
-$mcm-lime: #D2D755 !default;
-$mcm-blue: #8BD3E6 !default;
-
 $body-background-color: $white;
 $sidebar-color: $grey-lt-000;
 $border-color: $grey-lt-100;
@@ -15,7 +8,7 @@ $body-heading-color: $grey-dk-300;
 $nav-child-link-color: $grey-dk-100;
 $search-result-preview-color: $grey-dk-000;
 
-$link-color: $mcm-maroon;
+$link-color: #7A003C;
 $btn-primary-color: $mcm-blue;
 $base-button-color: #f7f7f7;
 
