--- a/_sass/color_schemes/mcmaster.scss
+++ b/_sass/color_schemes/mcmaster.scss
@@ -1,4 +1,3 @@
-
 $body-background-color: $white;
 $sidebar-color: $grey-lt-000;
 $border-color: $grey-lt-100;
@@ -8,7 +7,7 @@ $body-heading-color: $grey-dk-300;
 $nav-child-link-color: $grey-dk-100;
 $search-result-preview-color: $grey-dk-000;
 
-$link-color: #7A003C;
+$link-color: #7a003c;
 $btn-primary-color: $mcm-blue;
 $base-button-color: #f7f7f7;
 
