--- a/_sass/color_schemes/mcmaster.scss
+++ b/_sass/color_schemes/mcmaster.scss
@@ -8,7 +8,7 @@ $nav-child-link-color: $grey-dk-100;
 $search-result-preview-color: $grey-dk-000;
 
 $link-color: #7a003c;
-$btn-primary-color: #8BD3E6;
+$btn-primary-color: #8Bd3e6;
 $base-button-color: #f7f7f7;
 
 $code-background-color: $grey-lt-000;
