--- a/_sass/color_schemes/mcmaster.scss
+++ b/_sass/color_schemes/mcmaster.scss
@@ -1,3 +1,2 @@
-$link-color: #7a003c;
-$btn-primary-color: #8Bd3e6;
-$base-button-color: #f7f7f7;
+$link-color: red-000;
+$btn-primary-color: red-000;
